spacing issues

--- a/main.css
+++ b/main.css
@@ -426,6 +426,17 @@ li {
 .contact {
   background-color: #445098;
 }
+.contact-heading {
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 0;
+  margin-bottom: 6rem;
+}
+
+.contact-heading h1 {
+  font-size: 10rem;
+  font-weight: 300;
+}
 
 #googleForm {
   text-align: center;
